--- a/SchoolBusCliker/app/src/main/res/values/themes.xml
+++ b/SchoolBusCliker/app/src/main/res/values/themes.xml
@@ -1,16 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SchoolBusCliker" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SchoolBusCliker" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#D3588800</item>
+        <item name="colorPrimaryVariant">#4682B4</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">#205301</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
