--- a/SchoolBusCliker/app/src/main/res/menu/bottom_menu.xml
+++ b/SchoolBusCliker/app/src/main/res/menu/bottom_menu.xml
@@ -4,15 +4,20 @@
         android:id="@+id/item1"
         android:enabled="true"
         android:icon="@drawable/baseline_home_24"
-        android:title="아이템1" />
+        android:title="예약하기" />
     <item
         android:id="@+id/item2"
         android:enabled="true"
         android:icon="@drawable/baseline_search_24"
-        android:title="아이템2" />
+        android:title="정류장찾기" />
     <item
         android:id="@+id/item3"
         android:enabled="true"
-        android:icon="@drawable/baseline_add_circle_outline_24"
-        android:title="아이템3" />
+        android:icon="@drawable/baseline_directions_bus_24"
+        android:title="예약정보" />
+    <item
+        android:id="@+id/item4"
+        android:enabled="true"
+        android:icon="@drawable/baseline_insert_emoticon_24"
+        android:title="내정보" />
 </menu>
