date : 23-02-16 update : main / adding a reservation inside a goSchoolListFragment and goHomeListFragment add : Release01

--- a/SchoolBusCliker/app/src/main/res/layout/activity_reservation_fragment.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_reservation_fragment.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="411dp"
-        android:layout_height="90dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,4 +48,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"></LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/lin_fragment"
+        android:layout_width="409dp"
+        android:layout_height="646dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
