--- a/SchoolBusCliker/app/src/main/res/layout/activity_serach_bus_stop_fragment.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_serach_bus_stop_fragment.xml
@@ -4,13 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SearchBusStopFragment">
 
     <fragment
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="15"
         android:id="@+id/map"
         android:name="com.naver.maps.map.MapFragment" />
+
+    <Button
+        android:id="@+id/btn_location"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="현재 위치 이동"
+        android:background="@drawable/selector_button"
+        android:textColor="@drawable/selector_text"/>
 
 
 </LinearLayout>
