--- a/SchoolBusCliker/app/src/main/res/drawable/layer_unchecked.xml
+++ b/SchoolBusCliker/app/src/main/res/drawable/layer_unchecked.xml
@@ -7,7 +7,7 @@
         android:right="-2dp">
 
         <shape android:shape="rectangle">
-            <stroke android:color="#5F9C45" android:width="2dp"/>
+            <stroke android:color="#CF7687" android:width="2dp"/>
             <solid android:color="#FFFFFF" />
         </shape>
     </item>
