--- a/SchoolBusCliker/app/src/main/res/drawable/button.xml
+++ b/SchoolBusCliker/app/src/main/res/drawable/button.xml
@@ -21,7 +21,7 @@
                 />
             <stroke
                 android:width="5dp"
-                android:color="#A3FF8E"
+                android:color="#CF7687"
                 />
         </shape>
     </item>
