--- a/SchoolBusCliker/app/src/main/res/values/themes.xml
+++ b/SchoolBusCliker/app/src/main/res/values/themes.xml
@@ -2,15 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.SchoolBusCliker" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#D3588800</item>
-        <item name="colorPrimaryVariant">#4682B4</item>
+        <item name="colorPrimary">#a72b43</item>
+        <item name="colorPrimaryVariant">#a72b43</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#205301</item>
+        <item name="android:statusBarColor">#a72b43</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
