--- a/SchoolBusCliker/app/src/main/res/values/themes.xml
+++ b/SchoolBusCliker/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#a72b43</item>
+        <item name="colorAccent">#DD778B</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
