date : 23-02-28 add : 시내 등교버스 예약 구현 완료, 1차 UI 디자인 구축, 예약정보 구현 완료, 아이템 없을 시 데이터를 찾을 수 없음 메시지 표기, 로그아웃, 액티비티 전환 애니메이션 추가

--- a/SchoolBusCliker/app/src/main/res/layout/activity_reservation_go_home_list_fragment.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_reservation_go_home_list_fragment.xml
@@ -19,6 +19,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/bt_H1"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -27,6 +28,7 @@
                     android:background="@drawable/selector_button"/>
 
                 <Button
+                    android:id="@+id/bt_H2"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -42,6 +44,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/bt_H3"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -50,6 +53,7 @@
                     android:background="@drawable/selector_button"/>
 
                 <Button
+                    android:id="@+id/bt_H4"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -65,6 +69,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/bt_H5"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
