--- a/SchoolBusCliker/app/src/main/res/layout/activity_reservation_information.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_reservation_information.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.cafe24.as8794.schoolbuscliker.RecyclerViewEmptySupport
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
         android:background="#DDDDDD">
-    </androidx.recyclerview.widget.RecyclerView>
+    </com.cafe24.as8794.schoolbuscliker.RecyclerViewEmptySupport>
+
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="예약정보를 찾을 수 없네요..."
+        android:textSize="15dp"
+        android:visibility="gone"/>
 
 </LinearLayout>
