--- a/SchoolBusCliker/app/src/main/res/layout/activity_bus_reservation_d_bus_stop.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_bus_reservation_d_bus_stop.xml
@@ -57,17 +57,31 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:textColor="@drawable/selector_text" />
+                android:textColor="@drawable/selector_text"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tv_start"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.1"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="승차지점"
-                android:textSize="30dp"/>
+                android:textSize="20dp"/>
+
+            <Button
+                android:id="@+id/bt_start"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="승차지점"
+                android:textSize="30dp"
+                android:background="@drawable/layer_unchecked3"/>
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:background="@drawable/selector_button"
@@ -76,27 +90,40 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:textColor="@drawable/selector_text" />
+                android:textColor="@drawable/selector_text"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tv_end"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.3"
-                android:gravity="center"
-                android:text="목원대학교"
-                android:textSize="30dp" />
-
-            <Button
-                android:id="@+id/bt_next"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="하차지점"
+                android:textSize="20dp"/>
+
+            <Button
+                android:id="@+id/bt_end"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
                 android:layout_weight="0.2"
-                android:textSize="24dp"
-                android:text="다음"
-                android:background="@drawable/selector_button2"
-                android:enabled="false"/>
+                android:gravity="center"
+                android:text="목원대학교"
+                android:textSize="30dp"
+                android:enabled="false"
+                android:background="@drawable/layer_unchecked3"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:orientation="vertical">
 
         </LinearLayout>
 
@@ -105,6 +132,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1" />
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/bt_next"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:textSize="24dp"
+            android:text="다음"
+            android:background="@drawable/selector_button2"
+            android:enabled="false"/>
+    </LinearLayout>
 
 </LinearLayout>
