--- a/SchoolBusCliker/app/src/main/res/layout/activity_bus_reservation_d_date.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_bus_reservation_d_date.xml
@@ -55,30 +55,29 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_width="match_parent"
-
-                android:layout_height="0px"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:showWeekNumber="false" />
 
             <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="0.2"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="xxxx-xx-xx"
-                android:textSize="40dp"/>
-
-            <Button
-                android:id="@+id/bt_next"
+                android:id="@+id/tv_state"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.2"
-                android:textSize="24dp"
-                android:text="다음"
-                android:background="@drawable/selector_button2"
-                android:enabled="false"/>
+                android:layout_weight="0.1"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="에약할 수 없어요"
+                android:textSize="18dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:orientation="vertical" >
+
+
 
         </LinearLayout>
 
@@ -87,6 +86,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1" />
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/bt_next"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:textSize="24dp"
+            android:text="다음"
+            android:background="@drawable/selector_button2"
+            android:enabled="false"/>
+    </LinearLayout>
 
 </LinearLayout>
