--- a/SchoolBusCliker/app/src/main/res/layout/list_reservation.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/list_reservation.xml
@@ -19,7 +19,7 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
                 android:text="출발지" />
@@ -31,7 +31,8 @@
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="출발지" />
+                android:text="출발지"
+                android:textColor="#a72b43"/>
 
         </LinearLayout>
 
@@ -43,7 +44,7 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
                 android:text="도착지" />
@@ -55,7 +56,8 @@
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="도착지" />
+                android:text="도착지"
+                android:textColor="#a72b43"/>
 
         </LinearLayout>
 
@@ -67,7 +69,7 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
                 android:text="탑승버스" />
@@ -79,7 +81,8 @@
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="탑승버스" />
+                android:text="탑승버스"
+                android:textColor="#a72b43"/>
 
         </LinearLayout>
 
@@ -91,7 +94,7 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
                 android:text="탑승일자" />
@@ -103,7 +106,8 @@
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="탑승일자" />
+                android:text="탑승일자"
+                android:textColor="#a72b43"/>
 
         </LinearLayout>
 
@@ -182,6 +186,24 @@
                 android:layout_height="match_parent"
                 android:textSize="16dp"
                 android:text="예약취소" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lin_3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.9"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <Button
+                android:background="@drawable/selector_button"
+                android:id="@+id/btn_delete"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="16dp"
+                android:text="내역삭제" />
 
         </LinearLayout>
 
