--- a/SchoolBusCliker/app/src/main/res/values/themes.xml
+++ b/SchoolBusCliker/app/src/main/res/values/themes.xml
@@ -14,4 +14,9 @@
         <item name="colorAccent">#DD778B</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="MyPopupMenu" parent="@style/Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:dropDownHorizontalOffset">-8dp</item>
+        <item name="android:dropDownVerticalOffset">8dp</item>
+    </style>
 </resources>
