--- a/SchoolBusCliker/app/src/main/res/layout/activity_bus_reservation_d_bus_stop.xml
+++ b/SchoolBusCliker/app/src/main/res/layout/activity_bus_reservation_d_bus_stop.xml
@@ -36,7 +36,7 @@
 
             <TextView
                 android:layout_marginTop="10dp"
-                android:text="어디까지 가시나요?"
+                android:text="어디서 타시나요?"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:layout_width="match_parent"
